add validations